Bug 1476524 - Don't require so much contrast for selection background-against-background checks. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D111794