layout/base/nsCSSColorUtils.h
@@ -15,6 +15,12 @@
 // "Techniques For Accessibility Evalution And Repair Tools".
 // See http://www.w3.org/TR/AERT#color-contrast
 #define NS_SUFFICIENT_LUMINOSITY_DIFFERENCE 125000
+// NS_SUFFICIENT_LUMINOSITY_DIFFERENCE is the a11y standard for text
+// on a background. Use 20% of that standard since we have a background
+// on top of another background
+#define NS_SUFFICIENT_LUMINOSITY_DIFFERENCE_BG \
+  (NS_SUFFICIENT_LUMINOSITY_DIFFERENCE / 5)
+
 #define NS_LUMINOSITY_DIFFERENCE(a, b)                    \
   int32_t(mozilla::Abs(NS_GetLuminosity(a | 0xff000000) - \
                        NS_GetLuminosity(b | 0xff000000)))
